--- a/index.html
+++ b/index.html
@@ -7,27 +7,18 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <title>Bio-Links</title>
 </head>
 <body>
-    <div class="container">
-        <div class="box"> 
-            <img src="src/logo2.jpg" alt="logo">
+    <main class="cartao">
+        <div class="infos">
+            <img src="src/logo.png" alt="mihnha imagem">
+            <h1>Hi There, I am Luiz Carlos 👋</h1>
+            <h2>-- Junior Developer --</h2>
         </div>
-
-        <div class="name">
-            <h1>@luizjunior</h1>
-            <h2>Pra Cima, Sempre! 🚀</h2>
-        </div>
-
-        <div class="links">
-            <ul>
-                <li type="none"><i class="fa-regular fa-envelope"></i></li>
-                <i class="fa-brands fa-mailchimp"></i>
-            </ul>
-        </div>
-    </div>
+    </main>
 </body>
 <script src="https://kit.fontawesome.com/e334984a89.js" crossorigin="anonymous"></script>
 </html>
