--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main class="cartao">
         <div class="infos">
-            <img src="src/logo.png" alt="mihnha imagem">
+            <img src="src/face.png" alt="mihnha imagem">
             <h1>Hi There, I am Luiz Carlos 👋</h1>
             <h2>-- Junior Developer --</h2>
         </div>
