--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <h1>Hi There, I am Luiz Carlos 👋</h1>
             <h2>-- Junior Developer --</h2>
         </div>
+        <section class="links">
+            <div id=""></div>
+            <div></div>
+        </section>
     </main>
 </body>
 <script src="https://kit.fontawesome.com/e334984a89.js" crossorigin="anonymous"></script>
